<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ejerciciocontroles.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@drawable/comida">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_primerplato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/primer_plato"
                android:textSize="@dimen/d25"/>

            <CheckBox
                android:id="@+id/cbsopa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sopa"
                android:textSize="@dimen/d20"/>

            <CheckBox
                android:id="@+id/cbensalada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ensalada"
                android:textSize="@dimen/d20"/>

            <CheckBox
                android:id="@+id/cbnachos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nachos"
                android:textSize="@dimen/d20"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_segundoplato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/segundo_plato"
                android:textSize="@dimen/d25"/>

            <CheckBox
                android:id="@+id/cbcarne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carne"
                android:textSize="@dimen/d20"/>

            <CheckBox
                android:id="@+id/cbpescado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pescado"
                android:textSize="@dimen/d20"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:gravity="bottom|center">

        <TextView
            android:id="@+id/txt_bebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d20"
            android:text="@string/bebidas"
            android:textSize="@dimen/d25" />

        <RadioGroup
            android:id="@+id/radiogroup_sino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/d25"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/d30"
                android:layout_weight="1"
                android:text="@string/si" />

            <RadioButton
                android:id="@+id/rbno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/d30"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spbebidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_bebida"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="33dp" />

        <Button
            android:id="@+id/boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pulsarboton"
            android:text="@string/ver_pedido" />
    </LinearLayout>

</LinearLayout>
